kubernetes/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-cert-pod
  namespace: ingress-nginx
spec:
  containers:
  - name: test-container
    image: busybox
    command: [ "/bin/sh", "-c", "sleep 10000" ]
    
    volumeMounts:
    - name: secrets-store
      mountPath: "/mnt/secrets-store"
      readOnly: true
      
  volumes:
  - name: secrets-store
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: "azure-tls"
