kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # redirect
    kubernetes.io/ingress.class: nginx
    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tls.woongjin.com
    secretName: ingress-tls-secret
  rules:
  - host: tls.woongjin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
